[package]
name = "tabular2"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A simple library for displaying tabular data in the terminal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strip-ansi-escapes = "0.1.1"
unicode-width = "0.1.10"
